--- a/src/app.css
+++ b/src/app.css
@@ -8,21 +8,31 @@
 }
 
 body {
-    background-image: url("/background_pattern.svg");
-    @apply bg-bgColor;
-    @apply font-Roboto;
+    margin: 0;
+    padding: 0;
+    @apply bg-background-pattern;
+    @apply bg-whiteSnow;
+    @apply font-poppins;
+    @apply text-wood-800;
 }
 
-h1,h2 {
-    @apply font-Tektur;
+h1 {
     @apply font-bold;
 }
 
+h2 {
+    @apply font-normal;
+    @apply text-lg;
+}
+
+/* * {
+    border : 1px solid red;
+} */
 
 .link-underline {
     border-bottom-width: 0;
     background-image: linear-gradient(transparent, transparent),
-      linear-gradient(theme(colors.bgColor), theme(colors.bgColor));
+      linear-gradient(theme(colors.whiteSnow), theme(colors.whiteSnow));
     background-size: 0 2px;
     background-position: 0 100%;
     background-repeat: no-repeat;
@@ -31,7 +41,7 @@ h1,h2 {
   
 .link-underline-black {
     background-image: linear-gradient(transparent, transparent),
-      linear-gradient(theme(colors.black), theme(colors.black));
+      linear-gradient(theme(colors.wood.800), theme(colors.wood.800));
 }
   
 .link-underline:hover {
